Fix spacing

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 /*
- ##########################################################
- START DO NOT CHANGE ZONE
- ##########################################################
+##########################################################
+START DO NOT CHANGE ZONE
+##########################################################
 */
 
 html {
@@ -81,12 +81,13 @@ footer {
 }
 
 /*
- ##########################################################
- END DO NOT CHANGE ZONE
- ##########################################################
+##########################################################
+END DO NOT CHANGE ZONE
+##########################################################
 */
 
 /* Write your CSS here */
+
 blockquote {
   color: #666;
   text-align: right;
@@ -115,16 +116,16 @@ figcaption {
   font-style: italic;
 }
 
-p:nth-child(1)::first-letter:not(blockquote) {
-display: inline-block;
-float: left;
-font-size: 5rem;
-background-color: #666;
-color: #f2f2f2;
-border-top: 2px solid #333;
-border-bottom: 2px solid #333;
-font-style: normal;
-padding: .2em;
-margin-right: .2em;
-margin-left: -.3em;
+.wrapper > p:nth-child(1)::first-letter {
+  display: inline-block;
+  float: left;
+  font-size: 5rem;
+  background-color: #666;
+  color: #f2f2f2;
+  border-top: 2px solid #333;
+  border-bottom: 2px solid #333;
+  font-style: normal;
+  padding: .2em;
+  margin-right: .2em;
+  margin-left: -.3em;
 }
